--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ rustix = { version = "0.38.41" }
 scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.215", features = ["derive", "rc"] }
 serde_json = { version = "1.0.133" }
+serde_urlencoded = { version = "0.7.1" }
 stylance = { version = "0.5.2" }
 syn = { version = "2.0.89" }
 thiserror = { version = "2.0.3" }
