--- a/terrazzo/Cargo.toml
+++ b/terrazzo/Cargo.toml
@@ -58,14 +58,14 @@ web-sys = { workspace = true, optional = true, features = [
     "DragEvent",
     "Element",
     "FocusEvent",
-    'Headers',
+    "Headers",
     "HtmlInputElement",
     "MouseEvent",
     "Performance",
-    'Request',
-    'RequestInit',
-    'RequestMode',
-    'Response',
+    "Request",
+    "RequestInit",
+    "RequestMode",
+    "Response",
     "Window",
 ] }
 
