--- a/framework/terrazzo/Cargo.toml
+++ b/framework/terrazzo/Cargo.toml
@@ -70,12 +70,5 @@ output_file = "./target/css/common.scss"
 folders = ["./src/"]
 extensions = [".scss", ".css"]
 
-[lints.rust]
-unused = "deny"
-warnings = "deny"
-
-[lints.clippy]
-enum_variant_names = "allow"
-needless_return = "allow"
-too_many_arguments = "allow"
-type_complexity = "allow"
+[lints]
+workspace = true
