--- a/nameth/nameth-macro/Cargo.toml
+++ b/nameth/nameth-macro/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "named-macro"
+name = "nameth-macro"
 version = { workspace = true }
 authors = { workspace = true }
 edition = { workspace = true }
