--- a/nameth/nameth-tests/Cargo.toml
+++ b/nameth/nameth-tests/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "named-tests"
+name = "nameth-tests"
 version = { workspace = true }
 authors = { workspace = true }
 edition = { workspace = true }
@@ -7,7 +7,7 @@ edition = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dev-dependencies]
-named = { workspace = true }
+nameth = { workspace = true }
 
 [lib]
 
