--- a/nameth/nameth/Cargo.toml
+++ b/nameth/nameth/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "named"
+name = "nameth"
 version = { workspace = true }
 authors = { workspace = true }
 edition = { workspace = true }
@@ -7,7 +7,7 @@ edition = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-named-macro = { workspace = true }
+nameth-macro = { workspace = true }
 
 [lib]
 
