--- a/nameth/nameth-macro/Cargo.toml
+++ b/nameth/nameth-macro/Cargo.toml
@@ -5,6 +5,7 @@ authors = { workspace = true }
 edition = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
+description = "Implementation details for https://crates.io/crates/nameth"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
