Crate publish readiness (#3)
* Update action.yml

* nameth

* Nameth doc

* Fix cargo doc

* Ready for publish

* Update Cargo.toml

* Update Cargo.toml

* nameth-macro.version = "0.1.0"

--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -3,6 +3,8 @@ name = "terrazzo-demo"
 version = { workspace = true }
 authors = { workspace = true }
 edition = { workspace = true }
+repository = { workspace = true }
+license = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,7 +17,7 @@ path = "src/server.rs"
 required-features = ["server"]
 
 [dependencies]
-named = { workspace = true, optional = true }
+nameth = { workspace = true, optional = true }
 scopeguard = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
 terrazzo = { workspace = true }
@@ -41,7 +43,7 @@ terrazzo-build = { workspace = true }
 [features]
 default = []
 client = [
-    "dep:named",
+    "dep:nameth",
     "dep:scopeguard",
     "dep:serde_json",
     "dep:thiserror",
