--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,21 @@ members = [
     "framework/client",
     "framework/macro",
     "framework/terrazzo",
-    "named/named",
-    "named/named-macro",
-    "named/named-tests",
+    "nameth/nameth",
+    "nameth/nameth-macro",
+    "nameth/nameth-tests",
 ]
 resolver = "2"
 
 [workspace.package]
 version = "0.1.0"
-authors = ["Richard <richard.pavy@gmail.com>"]
+authors = ["Lamparo <LamparoS@Pavy.one>"]
 edition = "2021"
+repository = "https://github.com/Terrazzo-Web/Terrazzo"
+license = "MIT"
+description = """
+Lightweight, simple and efficient web UI framework based on Rust and WASM.
+"""
 
 [profile.dev.package."*"]
 # Set the default for dependencies in Development mode.
@@ -37,8 +42,8 @@ opt-level = "s"
 
 [workspace.dependencies]
 autoclone-macro = { path = "autoclone/autoclone-macro" }
-named = { path = "named/named" }
-named-macro = { path = "named/named-macro" }
+nameth = { path = "nameth/nameth" }
+nameth-macro = { version = "0.1.0", path = "nameth/nameth-macro" }
 terrazzo = { path = "framework/terrazzo" }
 terrazzo-build = { path = "framework/build" }
 terrazzo-client = { path = "framework/client" }
