--- a/nameth/nameth-macro/Cargo.toml
+++ b/nameth/nameth-macro/Cargo.toml
@@ -6,6 +6,7 @@ edition = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
 description = "Implementation details for <https://crates.io/crates/nameth>"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
