--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Lamparo <LamparoS@Pavy.one>"]
 edition = "2021"
 repository = "https://github.com/Terrazzo-Web/Terrazzo"
@@ -42,12 +42,12 @@ opt-level = "s"
 
 [workspace.dependencies]
 autoclone-macro = { path = "autoclone/autoclone-macro" }
-nameth = { path = "nameth/nameth" }
-nameth-macro = { version = "0.1.0", path = "nameth/nameth-macro" }
-terrazzo = { path = "framework/terrazzo" }
-terrazzo-build = { path = "framework/build" }
-terrazzo-client = { path = "framework/client" }
-terrazzo-macro = { path = "framework/macro" }
+nameth = { version = "0.1.1", path = "nameth/nameth" }
+nameth-macro = { version = "0.1.1", path = "nameth/nameth-macro" }
+terrazzo = { version = "0.1.1", path = "framework/terrazzo" }
+terrazzo-build = { version = "0.1.1", path = "framework/build" }
+terrazzo-client = { version = "0.1.1", path = "framework/client" }
+terrazzo-macro = { version = "0.1.1", path = "framework/macro" }
 
 axum = { version = "0.7.9" }
 darling = { version = "0.20.10" }
