--- a/nameth/nameth/Cargo.toml
+++ b/nameth/nameth/Cargo.toml
@@ -6,6 +6,7 @@ edition = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
 description = "A simple macro to generate a static &str representing the name of a function, a struct or an enum"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
