Autoclone crate publication readiness

--- a/autoclone/autoclone-tests/Cargo.toml
+++ b/autoclone/autoclone-tests/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "autoclone-macro-tests"
+name = "autoclone-tests"
 version = { workspace = true }
 authors = { workspace = true }
 edition = { workspace = true }
@@ -9,7 +9,7 @@ license = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dev-dependencies]
-autoclone-macro = { workspace = true }
+autoclone = { workspace = true }
 
 [lib]
 
