--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-    "autoclone/autoclone-macro",
-    "autoclone/autoclone-macro-tests",
+    "autoclone/autoclone",
+    "autoclone/autoclone-tests",
     "demo",
     "framework/build",
     "framework/client",
@@ -41,7 +41,7 @@ incremental = true       # Incremental compilation.
 opt-level = "s"
 
 [workspace.dependencies]
-autoclone-macro = { path = "autoclone/autoclone-macro" }
+autoclone = { path = "autoclone/autoclone" }
 nameth = { version = "0.1.1", path = "nameth/nameth" }
 nameth-macro = { version = "0.1.1", path = "nameth/nameth-macro" }
 terrazzo = { version = "0.1.1", path = "framework/terrazzo" }
