--- a/framework/client/Cargo.toml
+++ b/framework/client/Cargo.toml
@@ -5,6 +5,8 @@ authors = { workspace = true }
 edition = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
+description = "A simple macro to clone variables before passing them into a `move` closure or async block."
+readme = "README.md"
 
 [lib]
 
