--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ incremental = true       # Incremental compilation.
 opt-level = "s"
 
 [workspace.dependencies]
-autoclone = { path = "autoclone/autoclone" }
+autoclone = { version = "0.1.1", path = "autoclone/autoclone" }
 nameth = { version = "0.1.1", path = "nameth/nameth" }
 nameth-macro = { version = "0.1.1", path = "nameth/nameth-macro" }
 terrazzo = { version = "0.1.1", path = "framework/terrazzo" }
