--- a/framework/macro/Cargo.toml
+++ b/framework/macro/Cargo.toml
@@ -5,6 +5,8 @@ authors = { workspace = true }
 edition = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
+description = "Macros to generate dynamic HTML nodes in Rust"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
