--- a/framework/terrazzo/Cargo.toml
+++ b/framework/terrazzo/Cargo.toml
@@ -6,7 +6,7 @@ edition = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
 description = "The Terrazzo library to build dynamic web pages in Rust"
-readme = "../README.md"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
