--- a/nameth/nameth/Cargo.toml
+++ b/nameth/nameth/Cargo.toml
@@ -7,6 +7,8 @@ repository = { workspace = true }
 license = { workspace = true }
 description = "A simple macro to generate a static &str representing the name of a function, a struct or an enum"
 readme = "README.md"
+categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
+keywords = ["macro", "proc-macros", "string", "utility"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
