--- a/autoclone/autoclone/Cargo.toml
+++ b/autoclone/autoclone/Cargo.toml
@@ -8,7 +8,7 @@ license = { workspace = true }
 description = "A simple macro to clone variables before passing them into a `move` closure or async block."
 readme = "README.md"
 categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
-keywords = ["macro", "clone", "utility"]
+keywords = ["clone", "macro", "proc-macros", "utility", "terrazzo"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
