--- a/framework/client/Cargo.toml
+++ b/framework/client/Cargo.toml
@@ -7,6 +7,8 @@ repository = { workspace = true }
 license = { workspace = true }
 description = "A simple macro to clone variables before passing them into a `move` closure or async block."
 readme = "README.md"
+categories = ["web-programming", "wasm"]
+keywords = ["terrazzo", "wasm"]
 
 [lib]
 
