--- a/autoclone/autoclone/Cargo.toml
+++ b/autoclone/autoclone/Cargo.toml
@@ -7,6 +7,8 @@ repository = { workspace = true }
 license = { workspace = true }
 description = "A simple macro to clone variables before passing them into a `move` closure or async block."
 readme = "README.md"
+categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
+keywords = ["clone", "macro", "proc-macros", "utility", "terrazzo"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
