--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ members = [
     "nameth/nameth",
     "nameth/nameth-macro",
     "nameth/nameth-tests",
+    "remote/common",
+    "remote/server",
 ]
 resolver = "2"
 
@@ -48,8 +50,11 @@ terrazzo = { version = "0.1.3", path = "framework/terrazzo", default-features = 
 terrazzo-build = { version = "0.1.3", path = "framework/build" }
 terrazzo-client = { version = "0.1.3", path = "framework/client" }
 terrazzo-macro = { version = "0.1.3", path = "framework/macro" }
+trz-gateway-common = { path = "remote/common" }
+trz-gateway-server = { path = "remote/server" }
 
-axum = { version = "0.7.9" }
+axum = { version = "0.8.1" }
+axum-server = { version = "0.7.1" }
 darling = { version = "0.20.10" }
 dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
@@ -59,33 +64,43 @@ include_directory = { version = "0.1.1" }
 libc = { version = "0.2.169" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
+openssl = { version = "0.10.68" }
 pin-project = { version = "1.1.8" }
-prettyplease = { version = "0.2.27" }
-proc-macro2 = { version = "1.0.92" }
+portpicker = { version = "0.1.1" }
+prettyplease = { version = "0.2.29" }
+proc-macro2 = { version = "1.0.93" }
+prost = { version = "0.13.4" }
 quote = { version = "1.0.38" }
+reqwest = { version = "0.12.12" }
 reqwest-wasm = { version = "0.11.16" }
 rustix = { version = "0.38.42" }
+rustls-native-certs = { version = "0.8.1" }
 scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.217", features = ["derive", "rc"] }
-serde_json = { version = "1.0.134" }
+serde_json = { version = "1.0.137" }
 serde_urlencoded = { version = "0.7.1" }
-stylance = { version = "0.5.3" }
+stylance = { version = "0.5.4" }
 rsass-macros = { version = "0.28.10" }
 syn = { version = "2.0.93" }
-thiserror = { version = "2.0.9" }
-tokio = { version = "1.42.0" }
+tempfile = { version = "3.15.0" }
+thiserror = { version = "2.0.11" }
+tokio = { version = "1.43.0" }
+tokio-rustls = { version = "0.26.1" }
 tokio-util = { version = "0.7.13" }
+tonic = { version = "0.12.2" }
+tonic-build = { version = "0.12.3" }
 tower-http = { version = "0.6.2" }
 tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5" }
 tracing-subscriber = { version = "0.3.19" }
 tracing-subscriber-wasm = { version = "0.1.0" }
 uuid = { version = "1.11.0" }
-wasm-bindgen = { version = "0.2.99" }
-wasm-bindgen-futures = { version = "0.4.45" }
+wasm-bindgen = { version = "0.2.100" }
+wasm-bindgen-futures = { version = "0.4.50" }
 wasm-bindgen-test = { version = "0.3.45" }
 wasm-streams = { version = "0.4.2" }
 web-sys = { version = "0.3.76" }
+x509-parser = { version = "0.16.0" }
 
 [workspace.lints.rust]
 unused = "deny"
