--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -25,3 +25,6 @@ runs:
     - name: Install stylance
       shell: bash
       run: cargo install stylance-cli --version 0.5.2
+
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v3
