--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - uses: ./.github/actions/publish
         env:
           CRATES_TOKEN: ${{ secrets.CRATES_TOKEN }}
