--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
 futures = { version = "0.3.30" }
 http = { version = "1.2.0" }
+hyper-util = { version = "0.1.10" }
 include_directory = { version = "0.1.1" }
 libc = { version = "0.2.169" }
 mime = { version = "0.3.17" }
@@ -89,6 +90,7 @@ tokio-rustls = { version = "0.26.1" }
 tokio-util = { version = "0.7.13" }
 tonic = { version = "0.12.2" }
 tonic-build = { version = "0.12.3" }
+tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2" }
 tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5" }
