--- a/remote/server/Cargo.toml
+++ b/remote/server/Cargo.toml
@@ -23,7 +23,9 @@ hyper-util = { workspace = true, features = ["tokio"] }
 nameth = { workspace = true }
 oid-registry = { workspace = true }
 openssl = { workspace = true }
+prost-types = { workspace = true }
 rustls-native-certs = { workspace = true }
+scopeguard = { workspace = true }
 serde = { workspace = true, features = ["derive", "rc"] }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
@@ -39,7 +41,6 @@ x509-parser = { workspace = true }
 [dev-dependencies]
 portpicker = { workspace = true }
 reqwest = { workspace = true }
-scopeguard = { workspace = true }
 serde_json = { workspace = true }
 tempfile = { workspace = true }
 
