--- a/remote/server/Cargo.toml
+++ b/remote/server/Cargo.toml
@@ -16,15 +16,12 @@ trz-gateway-common = { workspace = true }
 autoclone = { workspace = true }
 axum = { workspace = true, features = ["macros", "ws"] }
 axum-server = { workspace = true, features = ["tls-rustls"] }
-cms = { workspace = true }
 dashmap = { workspace = true }
 futures = { workspace = true }
 hyper-util = { workspace = true, features = ["tokio"] }
 nameth = { workspace = true }
-oid-registry = { workspace = true }
 openssl = { workspace = true }
 prost-types = { workspace = true }
-rustls-native-certs = { workspace = true }
 scopeguard = { workspace = true }
 serde = { workspace = true, features = ["derive", "rc"] }
 thiserror = { workspace = true }
@@ -36,9 +33,9 @@ tower = { workspace = true, features = ["util"] }
 tower-http = { workspace = true, features = ["fs", "trace"] }
 tracing = { workspace = true }
 uuid = { workspace = true, features = ["v4"] }
-x509-parser = { workspace = true }
 
 [dev-dependencies]
+mime = { workspace = true }
 portpicker = { workspace = true }
 reqwest = { workspace = true }
 serde_json = { workspace = true }
