--- a/remote/common/Cargo.toml
+++ b/remote/common/Cargo.toml
@@ -27,6 +27,7 @@ tracing-subscriber = { workspace = true, features = ["env-filter"] }
 x509-parser = { workspace = true }
 
 [dev-dependencies]
+scopeguard = { workspace = true }
 serde_json = { workspace = true }
 
 [build-dependencies]
