--- a/remote/server/Cargo.toml
+++ b/remote/server/Cargo.toml
@@ -40,6 +40,7 @@ portpicker = { workspace = true }
 reqwest = { workspace = true }
 serde_json = { workspace = true }
 tempfile = { workspace = true }
+x509-parser = { workspace = true }
 
 [lints]
 workspace = true
