--- a/remote/client/Cargo.toml
+++ b/remote/client/Cargo.toml
@@ -12,13 +12,16 @@ description = { workspace = true }
 [dependencies]
 trz-gateway-common = { workspace = true }
 
+mime = { workspace = true }
 nameth = { workspace = true }
+openssl = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive", "rc"] }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
+tokio-tungstenite = { workspace = true }
 tonic = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
