--- a/remote/common/Cargo.toml
+++ b/remote/common/Cargo.toml
@@ -11,7 +11,7 @@ description = { workspace = true }
 
 [dependencies]
 axum = { workspace = true }
-axum-server = { workspace = true, features = ["tls-rustls"] }
+axum-server = { workspace = true, features = ["tls-rustls"], optional = true }
 cms = { workspace = true }
 nameth = { workspace = true }
 oid-registry = { workspace = true }
@@ -21,7 +21,7 @@ prost-types = { workspace = true }
 rustls-native-certs = { workspace = true }
 serde = { workspace = true, features = ["derive", "rc"] }
 thiserror = { workspace = true }
-tokio-rustls = { workspace = true }
+tokio-rustls = { workspace = true, optional = true }
 tonic = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
@@ -33,6 +33,11 @@ serde_json = { workspace = true }
 
 [build-dependencies]
 tonic-build = { workspace = true, features = ["prost"] }
+
+[features]
+default = []
+client = []
+server = ["dep:axum-server", "dep:tokio-rustls"]
 
 [lints]
 workspace = true
