--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
 futures = { version = "0.3.30" }
 http = { version = "1.2.0" }
+hostname = { version = "0.4.0" }
 hyper-util = { version = "0.1.10" }
 include_directory = { version = "0.1.1" }
 libc = { version = "0.2.169" }
