--- a/remote/server/Cargo.toml
+++ b/remote/server/Cargo.toml
@@ -16,28 +16,33 @@ trz-gateway-common = { workspace = true }
 autoclone = { workspace = true }
 axum = { workspace = true, features = ["macros", "ws"] }
 axum-server = { workspace = true, features = ["tls-rustls"] }
-cms = { version = "0.2.3" }
+dashmap = { workspace = true }
 futures = { workspace = true }
+hyper-util = { workspace = true, features = ["tokio"] }
 nameth = { workspace = true }
-oid-registry = { version = "0.8.1" }
-openssl = { workspace = true }
-rustls-native-certs = { workspace = true }
+prost-types = { workspace = true }
+rustls = { workspace = true }
+scopeguard = { workspace = true }
 serde = { workspace = true, features = ["derive", "rc"] }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tokio-rustls = { workspace = true }
 tokio-util = { workspace = true }
+tonic = { workspace = true }
+tower = { workspace = true, features = ["util"] }
 tower-http = { workspace = true, features = ["fs", "trace"] }
 tracing = { workspace = true }
 uuid = { workspace = true, features = ["v4"] }
-x509-parser = { workspace = true }
 
 [dev-dependencies]
+mime = { workspace = true }
+openssl = { workspace = true }
 portpicker = { workspace = true }
 reqwest = { workspace = true }
-scopeguard = { workspace = true }
 serde_json = { workspace = true }
 tempfile = { workspace = true }
+terrazzo-testutils = { workspace = true }
+x509-parser = { workspace = true }
 
 [lints]
 workspace = true
