--- a/remote/server/Cargo.toml
+++ b/remote/server/Cargo.toml
@@ -16,6 +16,7 @@ trz-gateway-common = { workspace = true }
 autoclone = { workspace = true }
 axum = { workspace = true, features = ["macros", "ws"] }
 axum-server = { workspace = true, features = ["tls-rustls"] }
+bytes = { workspace = true }
 dashmap = { workspace = true }
 futures = { workspace = true }
 hyper-util = { workspace = true, features = ["tokio"] }
@@ -29,7 +30,7 @@ tokio = { workspace = true, features = ["full"] }
 tokio-rustls = { workspace = true }
 tokio-util = { workspace = true }
 tonic = { workspace = true }
-tower = { workspace = true, features = ["util"] }
+tower = { workspace = true, features = ["balance", "buffer", "util"] }
 tower-http = { workspace = true, features = ["fs", "trace"] }
 tracing = { workspace = true }
 uuid = { workspace = true, features = ["v4"] }
