--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -20,7 +20,7 @@ required-features = ["server"]
 nameth = { workspace = true, optional = true }
 scopeguard = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
-terrazzo = { workspace = true }
+terrazzo = { workspace = true, optional = true }
 thiserror = { workspace = true, optional = true }
 tokio = { workspace = true, optional = true, features = ["full"] }
 tower-http = { workspace = true, optional = true, features = [
