--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,9 +67,10 @@ deluxe = { version = "0.5.0" }
 futures = { version = "0.3.31" }
 hostname = { version = "0.4.0" }
 http = { version = "1.2.0" }
+humantime = { version = "2.1.0" }
 hyper-util = { version = "0.1.10" }
 include_directory = { version = "0.1.1" }
-libc = { version = "0.2.169" }
+libc = { version = "0.2.170" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 oid-registry = { version = "0.8.1" }
