--- a/remote/client/Cargo.toml
+++ b/remote/client/Cargo.toml
@@ -36,7 +36,7 @@ uuid = { workspace = true }
 
 [dev-dependencies]
 trz-gateway-server = { workspace = true }
-terrazzo-testutils = { workspace = true }
+terrazzo-fixture = { workspace = true }
 
 portpicker = { workspace = true }
 tempfile = { workspace = true }
