--- a/remote/common/Cargo.toml
+++ b/remote/common/Cargo.toml
@@ -5,7 +5,10 @@ authors = { workspace = true }
 edition = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
-description = { workspace = true }
+description = "Secure Proxy / Agents implementation in Rust"
+readme = "README.md"
+categories = ["network-programming"]
+keywords = ["terrazzo", "gateway", "proxy", "agent"]
 
 [lib]
 
