--- a/remote/server/Cargo.toml
+++ b/remote/server/Cargo.toml
@@ -5,8 +5,10 @@ authors = { workspace = true }
 edition = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
+description = "Secure Proxy / Agents implementation in Rust"
 readme = "README.md"
-description = { workspace = true }
+categories = ["network-programming"]
+keywords = ["terrazzo", "gateway", "proxy"]
 
 [lib]
 
