--- a/utils/fixture/Cargo.toml
+++ b/utils/fixture/Cargo.toml
@@ -12,6 +12,8 @@ keywords = ["terrazzo", "test"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+
 [dependencies]
 
 [lints]
