uuid = { workspace = true, features = ["v4"] }

--- a/remote/client/Cargo.toml
+++ b/remote/client/Cargo.toml
@@ -35,7 +35,7 @@ tokio-util = { workspace = true }
 tonic = { workspace = true }
 tracing = { workspace = true }
 tracing-futures = { workspace = true }
-uuid = { workspace = true }
+uuid = { workspace = true, features = ["v4"] }
 
 [dev-dependencies]
 trz-gateway-server = { workspace = true }
