--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,7 @@ mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 oid-registry = { version = "0.8.1" }
 openssl = { version = "0.10.71" }
+pem = { version = "3.0.5" }
 pin-project = { version = "1.1.9" }
 portpicker = { version = "0.1.1" }
 prettyplease = { version = "0.2.29" }
