--- a/remote/common/Cargo.toml
+++ b/remote/common/Cargo.toml
@@ -14,7 +14,9 @@ keywords = ["terrazzo", "gateway", "proxy", "agent"]
 
 [dependencies]
 axum = { workspace = true }
+bytes = { workspace = true }
 cms = { workspace = true }
+futures = { workspace = true }
 nameth = { workspace = true }
 oid-registry = { workspace = true }
 openssl = { workspace = true }
@@ -25,6 +27,7 @@ rustls-native-certs = { workspace = true }
 serde = { workspace = true, features = ["derive", "rc"] }
 thiserror = { workspace = true }
 tokio = { workspace = true }
+tokio-util = { workspace = true }
 tonic = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
