ring version check

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,7 @@ prost-types = { version = "0.13.5" }
 quote = { version = "1.0.40" }
 reqwest = { version = "0.12.14" }
 reqwest-wasm = { version = "0.11.16" }
+ring = { version = "0.17.14" }
 rsass-macros = { version = "0.29.0" }
 rustix = { version = "1.0.2" }
 rustls = { version = "0.23.23" }
