--- a/remote/common/Cargo.toml
+++ b/remote/common/Cargo.toml
@@ -22,6 +22,7 @@ oid-registry = { workspace = true }
 openssl = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
+ring = { workspace = true }
 rustls = { workspace = true }
 rustls-native-certs = { workspace = true }
 serde = { workspace = true, features = ["derive", "rc"] }
