--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.1.5"
+version = "0.1.6"
 authors = ["Lamparo <LamparoS@Pavy.one>"]
 edition = "2024"
 repository = "https://github.com/Terrazzo-Web/Terrazzo"
@@ -45,20 +45,20 @@ incremental = true       # Incremental compilation.
 opt-level = "s"
 
 [workspace.dependencies]
-autoclone = { version = "0.1.5", path = "utils/autoclone/autoclone" }
-nameth = { version = "0.1.5", path = "utils/nameth/nameth" }
-nameth-macro = { version = "0.1.5", path = "utils/nameth/nameth-macro" }
-terrazzo = { version = "0.1.5", path = "framework/terrazzo", default-features = false }
-terrazzo-build = { version = "0.1.5", path = "framework/build" }
-terrazzo-client = { version = "0.1.5", path = "framework/client" }
-terrazzo-fixture = { version = "0.1.5", path = "utils/fixture" }
-terrazzo-macro = { version = "0.1.5", path = "framework/macro" }
-trz-gateway-client = { version = "0.1.5", path = "remote/client" }
-trz-gateway-common = { version = "0.1.5", path = "remote/common" }
-trz-gateway-server = { version = "0.1.5", path = "remote/server" }
+autoclone = { version = "0.1.6", path = "utils/autoclone/autoclone" }
+nameth = { version = "0.1.6", path = "utils/nameth/nameth" }
+nameth-macro = { version = "0.1.6", path = "utils/nameth/nameth-macro" }
+terrazzo = { version = "0.1.6", path = "framework/terrazzo", default-features = false }
+terrazzo-build = { version = "0.1.6", path = "framework/build" }
+terrazzo-client = { version = "0.1.6", path = "framework/client" }
+terrazzo-fixture = { version = "0.1.6", path = "utils/fixture" }
+terrazzo-macro = { version = "0.1.6", path = "framework/macro" }
+trz-gateway-client = { version = "0.1.6", path = "remote/client" }
+trz-gateway-common = { version = "0.1.6", path = "remote/common" }
+trz-gateway-server = { version = "0.1.6", path = "remote/server" }
 
 axum = { version = "0.8.1" }
-axum-server = { version = "0.7.1" }
+axum-server = { version = "0.7.2" }
 bytes = { version = "1.10.1" }
 cms = { version = "0.2.3" }
 darling = { version = "0.20.10" }
@@ -66,11 +66,11 @@ dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
 futures = { version = "0.3.31" }
 hostname = { version = "0.4.0" }
-http = { version = "1.2.0" }
-humantime = { version = "2.1.0" }
+http = { version = "1.3.1" }
+humantime = { version = "2.2.0" }
 hyper-util = { version = "0.1.10" }
 include_directory = { version = "0.1.1" }
-libc = { version = "0.2.170" }
+libc = { version = "0.2.171" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 oid-registry = { version = "0.8.1" }
@@ -78,15 +78,16 @@ openssl = { version = "0.10.71" }
 pem = { version = "3.0.5" }
 pin-project = { version = "1.1.10" }
 portpicker = { version = "0.1.1" }
-prettyplease = { version = "0.2.30" }
+prettyplease = { version = "0.2.31" }
 proc-macro2 = { version = "1.0.94" }
 prost = { version = "0.13.5" }
 prost-types = { version = "0.13.5" }
-quote = { version = "1.0.39" }
-reqwest = { version = "0.12.12" }
+quote = { version = "1.0.40" }
+reqwest = { version = "0.12.14" }
 reqwest-wasm = { version = "0.11.16" }
+ring = { version = "0.17.14" }
 rsass-macros = { version = "0.29.0" }
-rustix = { version = "0.38.44" }
+rustix = { version = "1.0.2" }
 rustls = { version = "0.23.23" }
 rustls-native-certs = { version = "0.8.1" }
 scopeguard = { version = "1.2.0" }
@@ -95,12 +96,12 @@ serde_json = { version = "1.0.140" }
 serde_urlencoded = { version = "0.7.1" }
 stylance = { version = "0.5.5" }
 syn = { version = "2.0.100" }
-tempfile = { version = "3.18.0" }
+tempfile = { version = "3.19.0" }
 thiserror = { version = "2.0.12" }
-tokio = { version = "1.44.0" }
+tokio = { version = "1.44.1" }
 tokio-rustls = { version = "0.26.2" }
 tokio-tungstenite = { version = "0.26.1" }
-tokio-util = { version = "0.7.13" }
+tokio-util = { version = "0.7.14" }
 tonic = { version = "0.12.3" }
 tonic-build = { version = "0.12.3" }
 tower = { version = "0.5.2" }
@@ -109,7 +110,7 @@ tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5", features = ["futures-03"] }
 tracing-subscriber = { version = "0.3.19" }
 tracing-subscriber-wasm = { version = "0.1.0" }
-uuid = { version = "1.13.1" }
+uuid = { version = "1.16.0" }
 wasm-bindgen = { version = "0.2.100" }
 wasm-bindgen-futures = { version = "0.4.50" }
 wasm-bindgen-test = { version = "0.3.50" }
