--- a/remote/server/Cargo.toml
+++ b/remote/server/Cargo.toml
@@ -14,7 +14,7 @@ keywords = ["terrazzo", "gateway", "proxy"]
 
 [features]
 default = []
-acme = ["dep:rcgen"]
+acme = ["dep:instant-acme", "dep:rcgen"]
 
 [dependencies]
 trz-gateway-common = { workspace = true }
@@ -26,7 +26,7 @@ bytes = { workspace = true }
 dashmap = { workspace = true }
 futures = { workspace = true }
 hyper-util = { workspace = true, features = ["tokio"] }
-instant-acme = { workspace = true }
+instant-acme = { workspace = true, optional = true }
 nameth = { workspace = true }
 openssl = { workspace = true }
 pem = { workspace = true }
