--- a/remote/server/Cargo.toml
+++ b/remote/server/Cargo.toml
@@ -14,7 +14,7 @@ keywords = ["terrazzo", "gateway", "proxy"]
 
 [features]
 default = []
-acme = ["dep:instant-acme", "dep:rcgen"]
+acme = ["dep:instant-acme", "dep:rcgen", "dep:serde_json"]
 
 [dependencies]
 trz-gateway-common = { workspace = true }
@@ -30,6 +30,7 @@ instant-acme = { workspace = true, optional = true }
 nameth = { workspace = true }
 openssl = { workspace = true }
 pem = { workspace = true }
+serde_json = { workspace = true, optional = true }
 rcgen = { workspace = true, optional = true }
 pin-project = { workspace = true }
 prost-types = { workspace = true }
